--- a/src/pages/homePageComponents/team.module.css
+++ b/src/pages/homePageComponents/team.module.css
@@ -1,32 +1,68 @@
 .team_container {
+    padding: 20px 0px 100px 0px;
+    text-align: center;
+}
+
+.team_container_title {
+    padding: 60px;
+    color: white;
+    font-size: 40px;
+    text-transform: uppercase;
+    background-color: #ef454a;
+}
+
+.members_container {
     display: flex;
     justify-content: center;
     margin-top: 100px;
-    background-color: #ef454a;
 }
 
 .member {
     width: 33%;
-    margin: 100px 0px;
     text-align: center;
+}
+
+.member:not(:last-child) {
+    border-right: 1px solid #373737;
 }
 
 .member_image {
     border-radius: 50%;
-    width: 50%;
+    width: 40%;
 }
 
 .member_name {
-    margin: 20px;
+    margin-top: 20px;
     font-size: 25px;
-    font-weight: 500;
+    font-weight: 300;
     line-height: 1.3;
-    color: white;
+    color: #373737;
+}
+.member_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .member_description {
     margin: 20px;
     font-size: 17px;
-    font-weight: 400;
-    color: white;
+    font-weight: 300;
+    color: #373737;
+}
+
+svg {
+    fill: #373737;
+}
+
+svg:hover {
+    fill: #ef454a;
+}
+
+.button {
+    display: block;
+}
+
+.button:hover {
+    color: #fff;
 }
