--- a/src/pages/search.css
+++ b/src/pages/search.css
@@ -1,37 +1,37 @@
-h1 {
-    text-align: center;
-    margin: 20px;
-}
 .container {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
 }
+
 .search-result {
     margin-top: 100px;
     margin-left: 30%;
     font-size: 20px;
 }
+
 .search-result a {
     width: 50%;
     display: block;
     text-decoration: none;
-    color: #07051a;
+    color: #373737;
     outline: none;
     cursor: pointer;
-    margin-top: 20px;
-    padding: 2px;
+    margin-top: 15px;
+    padding: 5px;
 }
+
 .search-result a:hover {
-    outline: 1px solid #666;
+    color: #ef454a;
 }
+
 form {
     position: relative;
     top: 60px;
     left: 50%;
     transform: translate(-50%,-50%);
     transition: all 1s;
-    width: 50px;
+    width: 50%;
     height: 50px;
     background: white;
     box-sizing: border-box;
@@ -40,7 +40,14 @@ form {
     padding: 5px;
 }
 
-input{
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { 
+    display: none; 
+}
+
+input {
     position: absolute;
     top: 0;
     left: 0;
@@ -48,15 +55,28 @@ input{
     height: 42.5px;
     line-height: 30px;
     outline: 0;
-    border: 0;
-    display: none;
+    border: none;
+    border-bottom: 1px solid #373737;
     font-size: 1em;
-    border-radius: 20px;
     padding: 0 20px;
     transition: all 1s;
+    text-align: center;
+    color: #373737;
+    font-family: 'Montserrat';
+    font-size: 20px;
 }
 
-.fa{
+input:focus {
+    border-bottom: 1px solid #ef454a;
+}
+
+input::placeholder {
+    color: #A1A1A1;
+    font-family: 'Montserrat';
+    font-size: 16px;
+}
+
+.fa {
     box-sizing: border-box;
     padding: 10px;
     width: 42.5px;
@@ -65,25 +85,16 @@ input{
     top: 0;
     right: 0;
     border-radius: 50%;
-    color: #07051a;
+    color: #373737;
     text-align: center;
     font-size: 1.2em;
     transition: all 1s;
 }
 
-form:hover{
-    width: 50%;
+form:hover .fa {
     cursor: pointer;
 }
 
-form:hover input{
-    border: 2px solid #07051a;
-    display: block;
-}
-
-form:hover .fa{
-    border: 2px solid #07051a;
-}
 .fa-search {
-    background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+    background: url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
 }
