--- a/src/pages/homePageComponents/team.module.css
+++ b/src/pages/homePageComponents/team.module.css
@@ -7,6 +7,7 @@
     padding: 60px;
     color: white;
     font-size: 40px;
+    font-weight: 600;
     text-transform: uppercase;
     background-color: #ef454a;
 }
