--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,700,900&display=swap&subset=cyrillic');
+@import '../../node_modules/react-modal-video/scss/modal-video.scss';
 
 * {
     margin: 0;
