--- a/src/components/componentsForAuthorPage/authorStyles/timeline.module.css
+++ b/src/components/componentsForAuthorPage/authorStyles/timeline.module.css
@@ -19,8 +19,12 @@
   .timeline_title{
     text-align: center;
     text-transform: uppercase;
-    font-weight: 600;
-    margin: 60px;
+    font-size: 40px;
+    font-weight: 800;
+    padding: 60px;
+    background-color: #f3f3f3;
+    border-top: 1px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
   }
 
   .container {
