--- a/src/pages/homePageComponents/team.module.css
+++ b/src/pages/homePageComponents/team.module.css
@@ -15,11 +15,11 @@
 .members_container {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    width: 100%;
+    padding-top: 100px;
 }
 
 .member {
-    width: 33%;
     text-align: center;
 }
 
@@ -29,7 +29,7 @@
 
 .member_image {
     border-radius: 50%;
-    width: 40%;
+    width: 50%;
 }
 
 .member_name {
@@ -66,4 +66,11 @@ svg:hover {
 
 .button:hover {
     color: #fff;
+}
+
+@media (max-width: 768px) {
+    .member {
+        border: none;
+        margin: 20px auto;
+    }
 }
