--- a/src/components/styles/header.module.css
+++ b/src/components/styles/header.module.css
@@ -72,3 +72,33 @@ select > option:hover {
     color: #0072c9;
     text-decoration: none;
 }
+
+
+@media (max-width: 900px) {
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 120px;
+    }
+
+    .nav_left, .nav_right {
+        margin: auto;
+    }
+
+    .nav_left {
+        display: flex;
+        width: auto;
+    }
+
+}
+
+@media (max-width: 600px) {
+
+    .logo_text {
+        font-size: 24px;
+        margin-top: 4px;
+    }
+
+}
