--- a/src/components/styles/header.module.css
+++ b/src/components/styles/header.module.css
@@ -34,6 +34,11 @@ h1 {
     margin: 0;
 }
 
+.option {
+    text-transform: uppercase;
+    color: red;
+}
+
 .nav_item {
     font-size: 26px;
     padding: 0px 24px;
