--- a/src/pages/homePageComponents/team.module.css
+++ b/src/pages/homePageComponents/team.module.css
@@ -68,6 +68,10 @@ svg:hover {
     color: #fff;
 }
 
+.row {
+    margin: 0;
+}
+
 @media (max-width: 768px) {
     .member {
         border: none;
