--- a/src/pages/search.css
+++ b/src/pages/search.css
@@ -97,3 +97,13 @@ form:hover .fa {
 .fa-search {
     background: url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
 }
+
+@media (max-width: 768px) {
+    .search-result {
+        margin-left: 10px;
+    }
+
+    form {
+        width: 100%;
+    }
+} 
