--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     color: #373737;
     font-size: 12px;
 }
@@ -18,21 +18,21 @@ body {
 }
 
 .carousel-inner {
-    height: 80vh;
+    height: 80vh !important;
 }
 
 .carousel-item.active, .carousel-item-next, .carousel-item-prev {
-    display: flex;
-    justify-content: center;
+    display: flex !important;
+    justify-content: center !important;
 }
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-    background-color: #ef454a;
-    border: 8px solid #ef454a;
-    border-radius: 25px;
-    width: 40px;
-    height: 40px;
+    background-color: #ef454a !important;
+    border: 8px solid #ef454a !important;
+    border-radius: 25px !important;
+    width: 40px !important;
+    height: 40px !important;
 }
 
 .carousel-control-prev, 
@@ -48,10 +48,6 @@ body {
     left: 25%;
     margin-bottom: 20px;
     width: 50%;
-}
-
-.row {
-    margin: 0;
 }
 
 @media (max-width: 768px) {
@@ -73,6 +69,14 @@ body {
         margin-bottom: 20px;
         width: 100%;
     }
+}
+
+@media (max-width: 600px) {
+    .logo_text {
+        font-size: 24px;
+        margin-top: 4px;
+    }
+
 }
 
 
