--- a/src/components/styles/header.module.css
+++ b/src/components/styles/header.module.css
@@ -107,3 +107,15 @@ select > option:hover {
     }
 
 }
+
+@media (max-width: 520px) {
+    nav {
+        height: auto;
+        padding: 10px 5px;
+        box-sizing: border-box;
+    }
+
+    .navigation_bar {
+        padding: 0;
+    }
+}
