--- a/src/pages/homePageComponents/director.module.css
+++ b/src/pages/homePageComponents/director.module.css
@@ -72,3 +72,52 @@
     color: #fff;
     background-color: #0072c9;
 }
+
+@media (max-width: 860px) {
+    .container {
+        flex-direction: column;
+        background-position-x: 90%;
+    }
+
+    .title {
+        height: 45px;
+        display: flex;
+        align-items: flex-end;
+    }
+
+    .text_color {
+        margin-right: 20px;
+    }
+
+    .content_container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 760px) {
+    .container {
+        margin: 30px 20px;
+    }
+}
+
+@media (max-width: 690px) {
+    .content_container {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        padding: 40px;
+    }
+
+    .image {
+        height: 300px;
+    }
+
+    .text_container {
+        padding: 0;
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 690px) {
+
+}
