fix: fix width of map and fullscreen

--- a/src/components/componentsForAuthorPage/MapComponent.css
+++ b/src/components/componentsForAuthorPage/MapComponent.css
@@ -5,3 +5,10 @@
   width: 800px;
   margin: 100px auto;
 }
+
+@media (max-width: 425px) {
+  .leaflet-container {
+    width: 100%;
+    margin: 0;
+  }
+}
